# sustainai-info-collector

./: README.md  articles.db  moe_news.db  preferences.db  pyproject.toml  sustainai.db  sustainai.sqbpro
app/: database.py  moe_scrape.py  server.py
app/Models/: articles.py  database.py  preferences.py  users.py
app/Tools/: moe_scrape.py
prompts/: initial.md
